--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "สถิติหวยฮานอยย้อนหลัง2564 ดูยังไง - เว็บใหม่ kerry899 2023 ล่าสุด",
+  "name": "NcOIxshAFfOV9wtHo2UiM3YYpSP1Ix1qimaow221FqagxcFx0J",
   "theme": "syntax",
   "version": "1.0.55",
-  "description": "สถิติหวยฮานอยย้อนหลัง2564 ชุดเลข ต่อ สถิติหวยฮานอยย้อนหลัง2564 Kerry899 หวยออนไลน์ อันดับหนึ่ง 3 ตัว ได้แก่407-470-074-047-704-740427-472-274-247-742-724ชุ",
+  "description": "แอพซื้อหวยฮานอย หวยไทยรัฐ แด่ แอพซื้อหวยฮานอย Choke หวยออนไลน์ อันดับหนึ่ง เป็นชุดเลขเด่นผลงานดีที่น่าสนใจเช่นเดียวกันกับ หวยอาจารย์พรนิมิต 1362 งวดที่แล้ว",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "สถิติหวยฮานอยย้อนหลัง2564",
-    "สถิติหวยฮานอยย้อนหลัง2564 Kerry899"
-  ],
+  "keywords": ["แอพซื้อหวยฮานอย","แอพซื้อหวยฮานอย Choke"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
