--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "แอพซื้อหวยฮานอย ดูยังไง - เว็บใหม่ choke 2023 ล่าสุด",
+  "name": "CDY8RsqIMacDl1T5NeMC7NnE8mJGUyvnKEtkBOa2KdYnedfkca",
   "theme": "syntax",
   "version": "1.0.56",
-  "description": "แอพซื้อหวยฮานอย หวยไทยรัฐ แด่ แอพซื้อหวยฮานอย Choke หวยออนไลน์ อันดับหนึ่ง เป็นชุดเลขเด่นผลงานดีที่น่าสนใจเช่นเดียวกันกับ หวยอาจารย์พรนิมิต 1362 งวดที่แล้ว",
+  "description": "โปรแกรม คํา น. วน หวย 3 ตัวบน เป็นอย่างไรบ้างละครับ โดย โปรแกรม คํา น. วน หวย 3 ตัวบน 77Lotto หวยออนไลน์ อันดับหนึ่ง มีสมาชิกท่านใดถูกรางวัลบ้างไหมครับ ถ้า",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "แอพซื้อหวยฮานอย",
-    "แอพซื้อหวยฮานอย Choke"
-  ],
+  "keywords": ["โปรแกรม คํา น. วน หวย 3 ตัวบน","โปรแกรม","คํา","น.","วน","หวย","3","ตัวบน","โปรแกรม 77Lotto","คํา 77Lotto","น. 77Lotto","วน 77Lotto","หวย 77Lotto","3 77Lotto","ตัวบน 77Lotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
