--- a/package.json
+++ b/package.json
@@ -1,26 +1,10 @@
 {
-  "name": "โปรแกรม คํา น. วน หวย 3 ตัวบน สมัครยังไง - เว็บใหม่ 77lotto 2023 ล่าสุด",
+  "name": "ltqzpvbvt3LsgfpbDuGT4dz1gQpVVbEo0gJmOtyKDQ5mg33Uc5",
   "theme": "syntax",
   "version": "1.0.57",
   "description": "โปรแกรม คํา น. วน หวย 3 ตัวบน เป็นอย่างไรบ้างละครับ โดย โปรแกรม คํา น. วน หวย 3 ตัวบน 77Lotto หวยออนไลน์ อันดับหนึ่ง มีสมาชิกท่านใดถูกรางวัลบ้างไหมครับ ถ้า",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "โปรแกรม คํา น. วน หวย 3 ตัวบน",
-    "โปรแกรม",
-    "คํา",
-    "น.",
-    "วน",
-    "หวย",
-    "3",
-    "ตัวบน",
-    "โปรแกรม 77Lotto",
-    "คํา 77Lotto",
-    "น. 77Lotto",
-    "วน 77Lotto",
-    "หวย 77Lotto",
-    "3 77Lotto",
-    "ตัวบน 77Lotto"
-  ],
+  "keywords": ["โปรแกรม คํา น. วน หวย 3 ตัวบน","โปรแกรม","คํา","น.","วน","หวย","3","ตัวบน","โปรแกรม 77Lotto","คํา 77Lotto","น. 77Lotto","วน 77Lotto","หวย 77Lotto","3 77Lotto","ตัวบน 77Lotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
