--- a/package.json
+++ b/package.json
@@ -1,26 +1,10 @@
 {
-  "name": "โปรแกรม คํา น. วน หวย 3 ตัวบน สมัครยังไง - เว็บใหม่ 77lotto 2023 ล่าสุด",
+  "name": "h9Rl4ZZvK5ue9PzYbCxvZb4ziat2RxFIUyxKAN5gfpyTGA5cme",
   "theme": "syntax",
   "version": "1.0.58",
-  "description": "โปรแกรม คํา น. วน หวย 3 ตัวบน เป็นอย่างไรบ้างละครับ โดย โปรแกรม คํา น. วน หวย 3 ตัวบน 77Lotto หวยออนไลน์ อันดับหนึ่ง มีสมาชิกท่านใดถูกรางวัลบ้างไหมครับ ถ้า",
+  "description": "เกม น่าเล่น ค่าย Joker เว็บซื้อหวยออนไลน์ ใน เกม น่าเล่น ค่าย Joker ที่ 818King เว็บพนัน อันดับหนึ่ง จ่ายเต็มระบบเล่นหวยที่โปร่งใสจ่ายชัวร์ เข้าเว็บหวยที่ม",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "โปรแกรม คํา น. วน หวย 3 ตัวบน",
-    "โปรแกรม",
-    "คํา",
-    "น.",
-    "วน",
-    "หวย",
-    "3",
-    "ตัวบน",
-    "โปรแกรม 77Lotto",
-    "คํา 77Lotto",
-    "น. 77Lotto",
-    "วน 77Lotto",
-    "หวย 77Lotto",
-    "3 77Lotto",
-    "ตัวบน 77Lotto"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
