--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "เกม น่าเล่น ค่าย joker มีคำตอบ - เว็บใหม่ 818king 2023 ล่าสุด",
+  "name": "cLLnbRTNkRmgzabLIJ3NYK8ApWyJjFMb8zAXbiJ83YqCl9hnNR",
   "theme": "syntax",
   "version": "1.0.59",
   "description": "เกม น่าเล่น ค่าย Joker เว็บซื้อหวยออนไลน์ ใน เกม น่าเล่น ค่าย Joker ที่ 818King เว็บพนัน อันดับหนึ่ง จ่ายเต็มระบบเล่นหวยที่โปร่งใสจ่ายชัวร์ เข้าเว็บหวยที่ม",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    null
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
