--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "เกม น่าเล่น ค่าย joker มีคำตอบ - เว็บใหม่ 818king 2023 ล่าสุด",
+  "name": "7XJc8yAoRAzYRcuxLMwdXLyOluK3rBO5ntdY7f2NhaKBNLAVa2",
   "theme": "syntax",
   "version": "1.0.60",
-  "description": "เกม น่าเล่น ค่าย Joker เว็บซื้อหวยออนไลน์ ใน เกม น่าเล่น ค่าย Joker ที่ 818King เว็บพนัน อันดับหนึ่ง จ่ายเต็มระบบเล่นหวยที่โปร่งใสจ่ายชัวร์ เข้าเว็บหวยที่ม",
+  "description": "สูตรบาคาร่า ai คาสิโนสล็อตพระพิฆเนศ ว่าด้วย สูตรบาคาร่า ai ที่ Webet88 เว็บพนัน มีเกมพนันทุกชนิด ที่สุดของ เกมสล็อตทำเงิน เว็บเปิดใหม่ ที่มาแรงสูงที่สุด ใน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    null
-  ],
+  "keywords": ["สูตรบาคาร่า AI","สูตรบาคาร่า","AI","สูตรบาคาร่า Webet88","AI Webet88"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
