Renaming 79Qebt8MlxRR5MP5qdfwiJCo6M2K3RFuBp3YEZ7IOJQrWonKyV to สูตรบาคาร่า ai คืออะไร - เว็บใหม่ webet88 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "79Qebt8MlxRR5MP5qdfwiJCo6M2K3RFuBp3YEZ7IOJQrWonKyV",
+  "name": "สูตรบาคาร่า ai คืออะไร - เว็บใหม่ webet88 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.60",
   "description": "สูตรบาคาร่า ai คาสิโนสล็อตพระพิฆเนศ ว่าด้วย สูตรบาคาร่า ai ที่ Webet88 เว็บพนัน มีเกมพนันทุกชนิด ที่สุดของ เกมสล็อตทำเงิน เว็บเปิดใหม่ ที่มาแรงสูงที่สุด ใน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["สูตรบาคาร่า AI","สูตรบาคาร่า","AI","สูตรบาคาร่า Webet88","AI Webet88"],
+  "keywords": [
+    "สูตรบาคาร่า AI",
+    "สูตรบาคาร่า",
+    "AI",
+    "สูตรบาคาร่า Webet88",
+    "AI Webet88"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
