--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "สูตรบาคาร่า ai คืออะไร - เว็บใหม่ webet88 2023 ล่าสุด",
+  "name": "7CjiU3G3B3oPDkxRwu5PJl86EEVHDkXIKBRKb8PbiIMPU0pxRJ",
   "theme": "syntax",
   "version": "1.0.61",
-  "description": "สูตรบาคาร่า ai คาสิโนสล็อตพระพิฆเนศ ว่าด้วย สูตรบาคาร่า ai ที่ Webet88 เว็บพนัน มีเกมพนันทุกชนิด ที่สุดของ เกมสล็อตทำเงิน เว็บเปิดใหม่ ที่มาแรงสูงที่สุด ใน",
+  "description": "หัดเล่นสล็อตฟรี คะแนนรีวิวสมัครสมาชิกเอ็กซ์ตร้าโบนัส โดย หัดเล่นสล็อตฟรี ที่ Next88 เว็บพนัน มีเกมพนันทุกชนิด 100 ออโต้โบนัส",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "สูตรบาคาร่า AI",
-    "สูตรบาคาร่า",
-    "AI",
-    "สูตรบาคาร่า Webet88",
-    "AI Webet88"
-  ],
+  "keywords": ["หัดเล่นสล็อตฟรี","หัดเล่นสล็อตฟรี Next88"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
