Renaming 7CjiU3G3B3oPDkxRwu5PJl86EEVHDkXIKBRKb8PbiIMPU0pxRJ to หัดเล่นสล็อตฟรี ดูที่ไหน - เว็บใหม่ next88 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "7CjiU3G3B3oPDkxRwu5PJl86EEVHDkXIKBRKb8PbiIMPU0pxRJ",
+  "name": "หัดเล่นสล็อตฟรี ดูที่ไหน - เว็บใหม่ next88 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.61",
   "description": "หัดเล่นสล็อตฟรี คะแนนรีวิวสมัครสมาชิกเอ็กซ์ตร้าโบนัส โดย หัดเล่นสล็อตฟรี ที่ Next88 เว็บพนัน มีเกมพนันทุกชนิด 100 ออโต้โบนัส",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["หัดเล่นสล็อตฟรี","หัดเล่นสล็อตฟรี Next88"],
+  "keywords": [
+    "หัดเล่นสล็อตฟรี",
+    "หัดเล่นสล็อตฟรี Next88"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
