--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หัดเล่นสล็อตฟรี ดูที่ไหน - เว็บใหม่ next88 2023 ล่าสุด",
+  "name": "lPRojcwGeNeTcdIsb6N288fLsUDYrdCQPQSpSE80dmujLyyI05",
   "theme": "syntax",
   "version": "1.0.62",
-  "description": "หัดเล่นสล็อตฟรี คะแนนรีวิวสมัครสมาชิกเอ็กซ์ตร้าโบนัส โดย หัดเล่นสล็อตฟรี ที่ Next88 เว็บพนัน มีเกมพนันทุกชนิด 100 ออโต้โบนัส",
+  "description": "ผลหวยหุ้นนิเคอิ สถิติสลากกินแบ่งย้อนไปเป็นแถวทางในการซื้อลอตเตอรี่ อย่างไรก็ดี ผลหวยหุ้นนิเคอิ Mawinbet มาวินเบท หวยออนไลน์ มีหวยทุกชนิด คอหวยเลขเด็ดงวดนี้",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หัดเล่นสล็อตฟรี",
-    "หัดเล่นสล็อตฟรี Next88"
-  ],
+  "keywords": ["ผลหวยหุ้นนิเคอิ","ผลหวยหุ้นนิเคอิ Mawinbet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
