--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "lPRojcwGeNeTcdIsb6N288fLsUDYrdCQPQSpSE80dmujLyyI05",
+  "name": "ผลหวยหุ้นนิเคอิ คืออะไร - เว็บใหม่ mawinbet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.62",
   "description": "ผลหวยหุ้นนิเคอิ สถิติสลากกินแบ่งย้อนไปเป็นแถวทางในการซื้อลอตเตอรี่ อย่างไรก็ดี ผลหวยหุ้นนิเคอิ Mawinbet มาวินเบท หวยออนไลน์ มีหวยทุกชนิด คอหวยเลขเด็ดงวดนี้",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["ผลหวยหุ้นนิเคอิ","ผลหวยหุ้นนิเคอิ Mawinbet"],
+  "keywords": [
+    "ผลหวยหุ้นนิเคอิ",
+    "ผลหวยหุ้นนิเคอิ Mawinbet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
