--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ผลหวยหุ้นนิเคอิ คืออะไร - เว็บใหม่ mawinbet 2023 ล่าสุด",
+  "name": "wml5vLIwSeFt4Mc6Hrv7JhdICgbxPAZ0yXL2xgvaICwVYvEeLb",
   "theme": "syntax",
   "version": "1.0.65",
-  "description": "ผลหวยหุ้นนิเคอิ สถิติสลากกินแบ่งย้อนไปเป็นแถวทางในการซื้อลอตเตอรี่ อย่างไรก็ดี ผลหวยหุ้นนิเคอิ Mawinbet มาวินเบท หวยออนไลน์ มีหวยทุกชนิด คอหวยเลขเด็ดงวดนี้",
+  "description": "อินเดียหุ้น Bein เนื่องด้วย อินเดียหุ้น ที่ Tubtim389 เว็บหวยออนไลน์ อันดับหนึ่ง Sports2 Bein Sports 2 Hd ดูบอลสด ช่องดูบอลสด ดูบอลสดฟรี ช่องดูบอลสดฟรี ดูบ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ผลหวยหุ้นนิเคอิ",
-    "ผลหวยหุ้นนิเคอิ Mawinbet"
-  ],
+  "keywords": ["อินเดียหุ้น","อินเดียหุ้น Tubtim389"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
