--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "อินเดียหุ้น ดูที่ไหน - เว็บใหม่ tubtim389 2023 ล่าสุด",
+  "name": "Vp4RqpSBDGGlKWzSkIUGWNCHZSPONqqph4GFZxtfoswXhD0vJL",
   "theme": "syntax",
   "version": "1.0.66",
-  "description": "อินเดียหุ้น Bein เนื่องด้วย อินเดียหุ้น ที่ Tubtim389 เว็บหวยออนไลน์ อันดับหนึ่ง Sports2 Bein Sports 2 Hd ดูบอลสด ช่องดูบอลสด ดูบอลสดฟรี ช่องดูบอลสดฟรี ดูบ",
+  "description": "หวย ลาว พัฒนา วัน นี้ เด่น ว่าด้วย หวย ลาว พัฒนา วัน นี้ Huay Happy หวยออนไลน์ อันดับหนึ่ง 0 ได้ชุดเลข 2 ตัวดังนี้02-03-05-0672-73-75-76เด่น 9 ได้ชุดเลข 2 ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "อินเดียหุ้น",
-    "อินเดียหุ้น Tubtim389"
-  ],
+  "keywords": ["หวย ลาว พัฒนา วัน นี้","หวย","ลาว","พัฒนา","วัน","นี้","หวย Huay Happy","ลาว Huay Happy","พัฒนา Huay Happy","วัน Huay Happy","นี้ Huay Happy"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
