--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "หวย ลาว พัฒนา วัน นี้ ได้อย่างไร - เว็บใหม่ huay happy 2023 ล่าสุด",
+  "name": "vJQH6roPdzlNJwoWh3HPXv0E11Fe6Bo4AexwD5Sxw2MqvojRKg",
   "theme": "syntax",
   "version": "1.0.67",
-  "description": "หวย ลาว พัฒนา วัน นี้ เด่น ว่าด้วย หวย ลาว พัฒนา วัน นี้ Huay Happy หวยออนไลน์ อันดับหนึ่ง 0 ได้ชุดเลข 2 ตัวดังนี้02-03-05-0672-73-75-76เด่น 9 ได้ชุดเลข 2 ",
+  "description": "สล็อต xo ดีที่สุด เกม เนื่องจาก สล็อต xo ดีที่สุด ที่ QQ288 เว็บพนัน มีเกมพนันทุกชนิด สล็อต Money Train 2 สามารถสมัคได้ด้วยตัวเองเพียงแต่กดเว็บไซต์ของเรา ส",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หวย ลาว พัฒนา วัน นี้",
-    "หวย",
-    "ลาว",
-    "พัฒนา",
-    "วัน",
-    "นี้",
-    "หวย Huay Happy",
-    "ลาว Huay Happy",
-    "พัฒนา Huay Happy",
-    "วัน Huay Happy",
-    "นี้ Huay Happy"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
