--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "GyOeQgknyVDmLBCDsjLvqooCf7HHsW7uNxNqqCdYNLBUTznYIB",
   "theme": "syntax",
   "version": "1.0.67",
-  "description": "สล็อต xo ดีที่สุด เกม เนื่องจาก สล็อต xo ดีที่สุด ที่ QQ288 เว็บพนัน มีเกมพนันทุกชนิด สล็อต Money Train 2 สามารถสมัคได้ด้วยตัวเองเพียงแต่กดเว็บไซต์ของเรา ส",
+  "description": "ตลาดหุ้นเกาหลีปิดกี่โมง ผลการออกรางวัล ว่าด้วย ตลาดหุ้นเกาหลีปิดกี่โมง Masurebet หวยออนไลน์ อันดับหนึ่ง หวยฮานอย ( Xổ Số Hà NộI ) ทั้ง 3 แบบ ฮานอย ปกติฮานอ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [null],
+  "keywords": ["ตลาดหุ้นเกาหลีปิดกี่โมง","ตลาดหุ้นเกาหลีปิดกี่โมง Masurebet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
