--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ตลาดหุ้นเกาหลีปิดกี่โมง มีคำตอบ - เว็บใหม่ masurebet 2023 ล่าสุด",
+  "name": "MildKPOu46s62Tc2qnYkEgxDq9sgR5SHSPN5Wj1T4VIah3JBKo",
   "theme": "syntax",
   "version": "1.0.68",
-  "description": "ตลาดหุ้นเกาหลีปิดกี่โมง ผลการออกรางวัล ว่าด้วย ตลาดหุ้นเกาหลีปิดกี่โมง Masurebet หวยออนไลน์ อันดับหนึ่ง หวยฮานอย ( Xổ Số Hà NộI ) ทั้ง 3 แบบ ฮานอย ปกติฮานอ",
+  "description": "ตลาดหุ้น เยอรมัน ปิด กี่ โมง คลิกเล่นเป่ายิ้งฉุบคลิกเล่นเป่ายิ้งฉุบ แม้ว่า ตลาดหุ้น เยอรมัน ปิด กี่ โมง Ruay รวย หวยออนไลน์ มีหวยทุกชนิด",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ตลาดหุ้นเกาหลีปิดกี่โมง",
-    "ตลาดหุ้นเกาหลีปิดกี่โมง Masurebet"
-  ],
+  "keywords": ["ตลาดหุ้น เยอรมัน ปิด กี่ โมง","ตลาดหุ้น","เยอรมัน","ปิด","กี่","โมง","ตลาดหุ้น Ruay","เยอรมัน Ruay","ปิด Ruay","กี่ Ruay","โมง Ruay"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
