Renaming MildKPOu46s62Tc2qnYkEgxDq9sgR5SHSPN5Wj1T4VIah3JBKo to ตลาดหุ้น เยอรมัน ปิด กี่ โมง แตกต่างกันอย่างไร - เว็บใหม่ ruay 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "MildKPOu46s62Tc2qnYkEgxDq9sgR5SHSPN5Wj1T4VIah3JBKo",
+  "name": "ตลาดหุ้น เยอรมัน ปิด กี่ โมง แตกต่างกันอย่างไร - เว็บใหม่ ruay 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.68",
   "description": "ตลาดหุ้น เยอรมัน ปิด กี่ โมง คลิกเล่นเป่ายิ้งฉุบคลิกเล่นเป่ายิ้งฉุบ แม้ว่า ตลาดหุ้น เยอรมัน ปิด กี่ โมง Ruay รวย หวยออนไลน์ มีหวยทุกชนิด",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["ตลาดหุ้น เยอรมัน ปิด กี่ โมง","ตลาดหุ้น","เยอรมัน","ปิด","กี่","โมง","ตลาดหุ้น Ruay","เยอรมัน Ruay","ปิด Ruay","กี่ Ruay","โมง Ruay"],
+  "keywords": [
+    "ตลาดหุ้น เยอรมัน ปิด กี่ โมง",
+    "ตลาดหุ้น",
+    "เยอรมัน",
+    "ปิด",
+    "กี่",
+    "โมง",
+    "ตลาดหุ้น Ruay",
+    "เยอรมัน Ruay",
+    "ปิด Ruay",
+    "กี่ Ruay",
+    "โมง Ruay"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
