--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "ตลาดหุ้น เยอรมัน ปิด กี่ โมง แตกต่างกันอย่างไร - เว็บใหม่ ruay 2023 ล่าสุด",
+  "name": "19ViOmbiGXKkgXwIhzjtGexR2YWit6QWlLNfKZngVY28J99Zkd",
   "theme": "syntax",
   "version": "1.0.69",
-  "description": "ตลาดหุ้น เยอรมัน ปิด กี่ โมง คลิกเล่นเป่ายิ้งฉุบคลิกเล่นเป่ายิ้งฉุบ แม้ว่า ตลาดหุ้น เยอรมัน ปิด กี่ โมง Ruay รวย หวยออนไลน์ มีหวยทุกชนิด",
+  "description": "หวยหุ้น999 ฝันเห็นคางคกตัวใหญ่ทำนายว่า จาก หวยหุ้น999 Masurebet หวยออนไลน์ อันดับหนึ่ง ในช่วงนี้เราไม่ควรเข้าไปยุ่งเกี่ยว หรือเป็นที่ปรึกษาให้ใคร เพราะจะนำ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ตลาดหุ้น เยอรมัน ปิด กี่ โมง",
-    "ตลาดหุ้น",
-    "เยอรมัน",
-    "ปิด",
-    "กี่",
-    "โมง",
-    "ตลาดหุ้น Ruay",
-    "เยอรมัน Ruay",
-    "ปิด Ruay",
-    "กี่ Ruay",
-    "โมง Ruay"
-  ],
+  "keywords": ["หวยหุ้น999","หวยหุ้น999 Masurebet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
