--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "Gz8bVPomb5cAUS0KWsMmFwOoP9DinzsfPUbguRfPOxmCqOS3U6",
+  "name": "หวยหุ้น999 ดูที่ไหน - เว็บใหม่ masurebet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.69",
   "description": "หวยหุ้น999 ฝันเห็นคางคกตัวใหญ่ทำนายว่า จาก หวยหุ้น999 Masurebet หวยออนไลน์ อันดับหนึ่ง ในช่วงนี้เราไม่ควรเข้าไปยุ่งเกี่ยว หรือเป็นที่ปรึกษาให้ใคร เพราะจะนำ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["หวยหุ้น999","หวยหุ้น999 Masurebet"],
+  "keywords": [
+    "หวยหุ้น999",
+    "หวยหุ้น999 Masurebet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
