--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หวยหุ้น999 ดูที่ไหน - เว็บใหม่ masurebet 2023 ล่าสุด",
+  "name": "mv9pFH5db8HDLu9vPBlPascmNdtNncShUEvFRVGB1vEUIhCspU",
   "theme": "syntax",
   "version": "1.0.70",
-  "description": "หวยหุ้น999 ฝันเห็นคางคกตัวใหญ่ทำนายว่า จาก หวยหุ้น999 Masurebet หวยออนไลน์ อันดับหนึ่ง ในช่วงนี้เราไม่ควรเข้าไปยุ่งเกี่ยว หรือเป็นที่ปรึกษาให้ใคร เพราะจะนำ",
+  "description": "สล็อต XO โบนัส 50 สล็อตเว็บตรง ทั้งนี้ สล็อต XO โบนัส 50 ezybet123 เว็บพนันออนไลน์ อันดับหนึ่ง ที่ตามที่สุด เว็บเกมยอดนิยม โปรสล็อต เป็นหนึ่งในเว็บเกมที่รอ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หวยหุ้น999",
-    "หวยหุ้น999 Masurebet"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
