--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "wUo0CtX7auAKZsbf5DkGgR7SG4ls16qaZ4sIm5jztZKE4OTuhF",
+  "name": "สล็อต xo โบนัส 50 แตกต่างกันอย่างไร - เว็บใหม่ ezybet123 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.73",
   "description": "สล็อต XO โบนัส 50 สล็อตเว็บตรง ทั้งนี้ สล็อต XO โบนัส 50 ezybet123 เว็บพนันออนไลน์ อันดับหนึ่ง ที่ตามที่สุด เว็บเกมยอดนิยม โปรสล็อต เป็นหนึ่งในเว็บเกมที่รอ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [null],
+  "keywords": [
+    null
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
