--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "สล็อต xo โบนัส 50 แตกต่างกันอย่างไร - เว็บใหม่ ezybet123 2023 ล่าสุด",
+  "name": "Bb8HyNL9CXdfS6uXuIxbpYy94PGe9ASX1n3F1JfOkpMGYU6z5y",
   "theme": "syntax",
   "version": "1.0.74",
-  "description": "สล็อต XO โบนัส 50 สล็อตเว็บตรง ทั้งนี้ สล็อต XO โบนัส 50 ezybet123 เว็บพนันออนไลน์ อันดับหนึ่ง ที่ตามที่สุด เว็บเกมยอดนิยม โปรสล็อต เป็นหนึ่งในเว็บเกมที่รอ",
+  "description": "1xbet soccersuck สำหรับใครที่เล่นเกมสล็อตออนไลน์ก็คงจะทราบกันดีอยู่แล้วว่าเกมสล็อตนั้นมีหลากลหายค่ายชั้นนำให้นักเดิมพันทุกท่านที่ได้เข้ามาเล่นนั้นเลือกกัน ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    null
-  ],
+  "keywords": ["1XBET SOCCERSUCK","1XBET","SOCCERSUCK","1XBET Ace333","SOCCERSUCK Ace333"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
