Renaming 7MTsezlscgHrpjddptMD22LhytIfKy3ZFXyU9OjANJEKbE3xiJ to 1xbet soccersuck ได้อย่างไร - เว็บใหม่ ace333 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "7MTsezlscgHrpjddptMD22LhytIfKy3ZFXyU9OjANJEKbE3xiJ",
+  "name": "1xbet soccersuck ได้อย่างไร - เว็บใหม่ ace333 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.75",
   "description": "1xbet soccersuck สำหรับใครที่เล่นเกมสล็อตออนไลน์ก็คงจะทราบกันดีอยู่แล้วว่าเกมสล็อตนั้นมีหลากลหายค่ายชั้นนำให้นักเดิมพันทุกท่านที่ได้เข้ามาเล่นนั้นเลือกกัน ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["1XBET SOCCERSUCK","1XBET","SOCCERSUCK","1XBET Ace333","SOCCERSUCK Ace333"],
+  "keywords": [
+    "1XBET SOCCERSUCK",
+    "1XBET",
+    "SOCCERSUCK",
+    "1XBET Ace333",
+    "SOCCERSUCK Ace333"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
