--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "1xbet soccersuck ได้อย่างไร - เว็บใหม่ ace333 2023 ล่าสุด",
+  "name": "PFD1txYZYqxkWJCxS1SWxUNWoPmEbD3IyAq6wDLLwJZKj2sM3Q",
   "theme": "syntax",
   "version": "1.0.76",
-  "description": "1xbet soccersuck สำหรับใครที่เล่นเกมสล็อตออนไลน์ก็คงจะทราบกันดีอยู่แล้วว่าเกมสล็อตนั้นมีหลากลหายค่ายชั้นนำให้นักเดิมพันทุกท่านที่ได้เข้ามาเล่นนั้นเลือกกัน ",
+  "description": "แจ้งฝากsbobet888 สำหรับตัวเกมส์นี้ก็จะมีเงื่อนไขไม่เยอะและก็ไม่ยุ่งยากด้วย ว่าด้วย แจ้งฝากsbobet888 ที่ PG168 เว็บพนัน มีเกมพนันทุกชนิด แจ้งฝากsbobet888 ใน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "1XBET SOCCERSUCK",
-    "1XBET",
-    "SOCCERSUCK",
-    "1XBET Ace333",
-    "SOCCERSUCK Ace333"
-  ],
+  "keywords": ["แจ้งฝากSBOBET888","แจ้งฝากSBOBET888 PG168"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
