--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "PFD1txYZYqxkWJCxS1SWxUNWoPmEbD3IyAq6wDLLwJZKj2sM3Q",
+  "name": "แจ้งฝากsbobet888 เล่นที่ไหน - เว็บใหม่ pg168 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.76",
   "description": "แจ้งฝากsbobet888 สำหรับตัวเกมส์นี้ก็จะมีเงื่อนไขไม่เยอะและก็ไม่ยุ่งยากด้วย ว่าด้วย แจ้งฝากsbobet888 ที่ PG168 เว็บพนัน มีเกมพนันทุกชนิด แจ้งฝากsbobet888 ใน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["แจ้งฝากSBOBET888","แจ้งฝากSBOBET888 PG168"],
+  "keywords": [
+    "แจ้งฝากSBOBET888",
+    "แจ้งฝากSBOBET888 PG168"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
