--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "แจ้งฝากsbobet888 เล่นที่ไหน - เว็บใหม่ pg168 2023 ล่าสุด",
+  "name": "9JkpLLiya8Fy9t8jb1ebkMqvfzVfsTo2XCWk5RtCRWASgOvjii",
   "theme": "syntax",
   "version": "1.0.78",
-  "description": "แจ้งฝากsbobet888 สำหรับตัวเกมส์นี้ก็จะมีเงื่อนไขไม่เยอะและก็ไม่ยุ่งยากด้วย ว่าด้วย แจ้งฝากsbobet888 ที่ PG168 เว็บพนัน มีเกมพนันทุกชนิด แจ้งฝากsbobet888 ใน",
+  "description": "ผลหวยอินเดียย้อนหลัง เลขเด็ดเจ๊นุ๊ก หาก ผลหวยอินเดียย้อนหลัง Ltobet แอลทีโอ เบท หวยออนไลน์ มีหวยทุกชนิด หวยฮานอย ผลหวยอินเดียย้อนหลัง งวดวันที่ 8465เว็บซื้",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "แจ้งฝากSBOBET888",
-    "แจ้งฝากSBOBET888 PG168"
-  ],
+  "keywords": ["ผลหวยอินเดียย้อนหลัง","ผลหวยอินเดียย้อนหลัง Ltobet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
