--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ผลหวยอินเดียย้อนหลัง คืออะไร - เว็บใหม่ ltobet 2023 ล่าสุด",
+  "name": "jfnBWDJkf7UChsFo73eonSb8nJEx6x4wGcltkTJxyEDTjltMg0",
   "theme": "syntax",
   "version": "1.0.79",
-  "description": "ผลหวยอินเดียย้อนหลัง เลขเด็ดเจ๊นุ๊ก หาก ผลหวยอินเดียย้อนหลัง Ltobet แอลทีโอ เบท หวยออนไลน์ มีหวยทุกชนิด หวยฮานอย ผลหวยอินเดียย้อนหลัง งวดวันที่ 8465เว็บซื้",
+  "description": "หุ้น ฮั่ ง เส็ง VIP เลขเด็ด ได้แก่ หุ้น ฮั่ ง เส็ง VIP ที่ Huaylike เว็บหวยออนไลน์ อันดับหนึ่ง ในงวดวันที่ 2 พฤษภาคม 2566 ที่จะถึงนี้ ขอนำเสนอชุดเลขผลงานดี",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ผลหวยอินเดียย้อนหลัง",
-    "ผลหวยอินเดียย้อนหลัง Ltobet"
-  ],
+  "keywords": ["หุ้น ฮั่ ง เส็ง VIP","หุ้น","ฮั่","ง","เส็ง","VIP","หุ้น Huaylike","ฮั่ Huaylike","ง Huaylike","เส็ง Huaylike","VIP Huaylike"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
