--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "dxHUzugZTWKVVHwvJAB85iHGDuzxvXfs6ms8GyA2eSCIDJkbDa",
+  "name": "หุ้น ฮั่ ง เส็ง vip ดูยังไง - เว็บใหม่ huaylike 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.79",
   "description": "หุ้น ฮั่ ง เส็ง VIP เลขเด็ด ได้แก่ หุ้น ฮั่ ง เส็ง VIP ที่ Huaylike เว็บหวยออนไลน์ อันดับหนึ่ง ในงวดวันที่ 2 พฤษภาคม 2566 ที่จะถึงนี้ ขอนำเสนอชุดเลขผลงานดี",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["หุ้น ฮั่ ง เส็ง VIP","หุ้น","ฮั่","ง","เส็ง","VIP","หุ้น Huaylike","ฮั่ Huaylike","ง Huaylike","เส็ง Huaylike","VIP Huaylike"],
+  "keywords": [
+    "หุ้น ฮั่ ง เส็ง VIP",
+    "หุ้น",
+    "ฮั่",
+    "ง",
+    "เส็ง",
+    "VIP",
+    "หุ้น Huaylike",
+    "ฮั่ Huaylike",
+    "ง Huaylike",
+    "เส็ง Huaylike",
+    "VIP Huaylike"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
