--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "หุ้น ฮั่ ง เส็ง vip ดูยังไง - เว็บใหม่ huaylike 2023 ล่าสุด",
+  "name": "ZpEsRVLHh7sepDG8ZlNtKDUR0Qmaea5p0O5GqfN1yIkmnn19OL",
   "theme": "syntax",
   "version": "1.0.80",
-  "description": "หุ้น ฮั่ ง เส็ง VIP เลขเด็ด ได้แก่ หุ้น ฮั่ ง เส็ง VIP ที่ Huaylike เว็บหวยออนไลน์ อันดับหนึ่ง ในงวดวันที่ 2 พฤษภาคม 2566 ที่จะถึงนี้ ขอนำเสนอชุดเลขผลงานดี",
+  "description": "ลาวสตาร์วันนี้ พร้อมโพสต์ข้อความว่า ต่อ ลาวสตาร์วันนี้ Mawinbet หวยออนไลน์ อันดับหนึ่ง เป็นทรัพย์ที่เทวดาประทานให้ จึงมีความประสงค์ที่จะแจกทำบุญเป็นทานสร้า",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หุ้น ฮั่ ง เส็ง VIP",
-    "หุ้น",
-    "ฮั่",
-    "ง",
-    "เส็ง",
-    "VIP",
-    "หุ้น Huaylike",
-    "ฮั่ Huaylike",
-    "ง Huaylike",
-    "เส็ง Huaylike",
-    "VIP Huaylike"
-  ],
+  "keywords": ["ลาวสตาร์วันนี้","ลาวสตาร์วันนี้ Mawinbet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
