Renaming ZpEsRVLHh7sepDG8ZlNtKDUR0Qmaea5p0O5GqfN1yIkmnn19OL to ลาวสตาร์วันนี้ ได้อย่างไร - เว็บใหม่ mawinbet 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "ZpEsRVLHh7sepDG8ZlNtKDUR0Qmaea5p0O5GqfN1yIkmnn19OL",
+  "name": "ลาวสตาร์วันนี้ ได้อย่างไร - เว็บใหม่ mawinbet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.80",
   "description": "ลาวสตาร์วันนี้ พร้อมโพสต์ข้อความว่า ต่อ ลาวสตาร์วันนี้ Mawinbet หวยออนไลน์ อันดับหนึ่ง เป็นทรัพย์ที่เทวดาประทานให้ จึงมีความประสงค์ที่จะแจกทำบุญเป็นทานสร้า",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["ลาวสตาร์วันนี้","ลาวสตาร์วันนี้ Mawinbet"],
+  "keywords": [
+    "ลาวสตาร์วันนี้",
+    "ลาวสตาร์วันนี้ Mawinbet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
