--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ลาวสตาร์วันนี้ ได้อย่างไร - เว็บใหม่ mawinbet 2023 ล่าสุด",
+  "name": "C7tVw59DUbObmFavi7iLkMZI6FC8l4RduPSntLw5pJDBkf4UY1",
   "theme": "syntax",
   "version": "1.0.81",
-  "description": "ลาวสตาร์วันนี้ พร้อมโพสต์ข้อความว่า ต่อ ลาวสตาร์วันนี้ Mawinbet หวยออนไลน์ อันดับหนึ่ง เป็นทรัพย์ที่เทวดาประทานให้ จึงมีความประสงค์ที่จะแจกทำบุญเป็นทานสร้า",
+  "description": "Geisha Coffee คือ Sand88สล็อต แต่ว่า Geisha Coffee คือ ที่ Next88 เว็บพนัน อันดับหนึ่ง ค่ายดังจากผู้ให้บริการขนมารวมกันอยู่ตรงนี้ในเว็บเดียว แถมยังมีความน่",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ลาวสตาร์วันนี้",
-    "ลาวสตาร์วันนี้ Mawinbet"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
