--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "C7tVw59DUbObmFavi7iLkMZI6FC8l4RduPSntLw5pJDBkf4UY1",
   "theme": "syntax",
   "version": "1.0.81",
-  "description": "Geisha Coffee คือ Sand88สล็อต แต่ว่า Geisha Coffee คือ ที่ Next88 เว็บพนัน อันดับหนึ่ง ค่ายดังจากผู้ให้บริการขนมารวมกันอยู่ตรงนี้ในเว็บเดียว แถมยังมีความน่",
+  "description": "หวยไต้หวันออกวันไหน ผมได้ทำหัวข้อแยกวิธีการเล่นทุกอย่างไว้แล้วครับ ได้แก่ หวยไต้หวันออกวันไหน Huaysod หวยสด หวยออนไลน์ มีหวยทุกชนิด กดเข้าไปอ่านทีละหัวข้อไ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [null],
+  "keywords": ["หวยไต้หวันออกวันไหน","หวยไต้หวันออกวันไหน Huaysod"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
