--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หวยไต้หวันออกวันไหน สมัครยังไง - เว็บใหม่ huaysod 2023 ล่าสุด",
+  "name": "cpFwswigkNWfKWzL8VMJLb7cEnDlufZVwBgGMhUOwjoikdiW57",
   "theme": "syntax",
   "version": "1.0.82",
-  "description": "หวยไต้หวันออกวันไหน ผมได้ทำหัวข้อแยกวิธีการเล่นทุกอย่างไว้แล้วครับ ได้แก่ หวยไต้หวันออกวันไหน Huaysod หวยสด หวยออนไลน์ มีหวยทุกชนิด กดเข้าไปอ่านทีละหัวข้อไ",
+  "description": "สด หุ้น ฮั่ ง เส็ง จะเห็นได้ชัดเจนเลยว่า สด หุ้น ฮั่ ง เส็ง ได้แก่ สด หุ้น ฮั่ ง เส็ง Thailotto ไทยล็อตโต้ หวยออนไลน์ มีหวยทุกชนิด อัตราการจ่ายของหวยรัฐบาล",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หวยไต้หวันออกวันไหน",
-    "หวยไต้หวันออกวันไหน Huaysod"
-  ],
+  "keywords": ["สด หุ้น ฮั่ ง เส็ง","สด","หุ้น","ฮั่","ง","เส็ง","สด Thailotto","หุ้น Thailotto","ฮั่ Thailotto","ง Thailotto","เส็ง Thailotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
