--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "สด หุ้น ฮั่ ง เส็ง สมัครยังไง - เว็บใหม่ thailotto 2023 ล่าสุด",
+  "name": "LQoCR2UzuXUixoaF7WsHnwYdgcMXOHRZqcplsI4ki620hZgNWB",
   "theme": "syntax",
   "version": "1.0.83",
   "description": "สด หุ้น ฮั่ ง เส็ง จะเห็นได้ชัดเจนเลยว่า สด หุ้น ฮั่ ง เส็ง ได้แก่ สด หุ้น ฮั่ ง เส็ง Thailotto ไทยล็อตโต้ หวยออนไลน์ มีหวยทุกชนิด อัตราการจ่ายของหวยรัฐบาล",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "สด หุ้น ฮั่ ง เส็ง",
-    "สด",
-    "หุ้น",
-    "ฮั่",
-    "ง",
-    "เส็ง",
-    "สด Thailotto",
-    "หุ้น Thailotto",
-    "ฮั่ Thailotto",
-    "ง Thailotto",
-    "เส็ง Thailotto"
-  ],
+  "keywords": ["สด หุ้น ฮั่ ง เส็ง","สด","หุ้น","ฮั่","ง","เส็ง","สด Thailotto","หุ้น Thailotto","ฮั่ Thailotto","ง Thailotto","เส็ง Thailotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
