--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "โปรแกรมสูตรหวยมาเล ย์ ดูที่ไหน - เว็บใหม่ cat888 2023 ล่าสุด",
+  "name": "3eWMMMin0TMG06Vx6xOO97HPRDcQ8wVtCXIWUHxT5u6L6pl8Y1",
   "theme": "syntax",
   "version": "1.0.87",
-  "description": "โปรแกรมสูตรหวยมาเล ย์ ฝันเห็นกาดำ เมื่อ โปรแกรมสูตรหวยมาเล ย์ Cat888 แคท888 หวยออนไลน์ มีหวยทุกชนิด ทำนายความฝันว่า จะได้รับเคราะห์หรือเป็นลางบอกเหตุร้ายไม",
+  "description": "just jewels sm pampanga เป็น อย่างไรก็ดี just jewels sm pampanga PGSlot เว็บพนันออนไลน์ อันดับหนึ่ง เว็บเกมออนไลน์ ที่มิได้มีเพียงแค่สล็อตแค่นั้น ยังมรเกมอ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "โปรแกรมสูตรหวยมาเล ย์",
-    "โปรแกรมสูตรหวยมาเล",
-    "ย์",
-    "โปรแกรมสูตรหวยมาเล Cat888",
-    "ย์ Cat888"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
